--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,7 @@ PORT=4000
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=scheduling_db
+DB_NAME=scheduling_db_dev
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_POOL_MIN=0
